[gd_scene load_steps=12 format=3 uid="uid://bmdhht7m0fbgy"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_um2e6"]
[ext_resource type="Resource" path="res://dialogue/trial/start.dialogue" id="2_lkt4j"]
[ext_resource type="PackedScene" path="res://scenes/DialogBubble.tscn" id="3_05j2k"]
[ext_resource type="Texture2D" path="res://backgrounds/ct/judgestand.png" id="4_yqygb"]
[ext_resource type="Texture2D" path="res://characters/monokuma/Normal.png" id="5_3cos0"]
[ext_resource type="Texture2D" path="res://backgrounds/ct/shade.png" id="6_fngl7"]
[ext_resource type="PackedScene" path="res://scenes/MusicPlayer.tscn" id="7_1shgo"]
[ext_resource type="Script" path="res://scenes/StatementIndicator.gd" id="8_lm432"]
[ext_resource type="PackedScene" path="res://scenes/EvidenceScreen.tscn" id="9_3qwbu"]

[sub_resource type="Animation" id="Animation_o2c1q"]
resource_name = "Flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f0ixr"]
_data = {
"Flash": SubResource("Animation_o2c1q")
}

[node name="Main" type="Node" node_paths=PackedStringArray("music_player", "sfx_player", "background", "char_sprite", "foreground", "effect_player", "dialog_bubble", "statement_indicator", "evidence_button", "evidence_screen")]
script = ExtResource("1_um2e6")
dialogue_resource = ExtResource("2_lkt4j")
dialogue_title = "start"
music_player = NodePath("MusicPlayer")
sfx_player = NodePath("SFXPlayer")
background = NodePath("Background")
char_sprite = NodePath("CharSprite")
foreground = NodePath("Foreground")
effect_player = NodePath("EffectPlayer")
dialog_bubble = NodePath("DialogBubble")
statement_indicator = NodePath("StatementIndicator")
evidence_button = NodePath("EvidenceButton")
evidence_screen = NodePath("EvidenceScreen")
metadata/_edit_lock_ = true

[node name="MusicPlayer" parent="." instance=ExtResource("7_1shgo")]

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("4_yqygb")
metadata/_edit_lock_ = true

[node name="CharSprite" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("5_3cos0")
metadata/_edit_lock_ = true

[node name="Foreground" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("6_fngl7")
metadata/_edit_lock_ = true

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ScreenFlash")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_f0ixr")
}

[node name="ScreenFlash" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="DialogBubble" parent="." instance=ExtResource("3_05j2k")]

[node name="StatementIndicator" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
alignment = 2
script = ExtResource("8_lm432")

[node name="EvidenceButton" type="Button" parent="."]
offset_right = 172.0
offset_bottom = 44.0
text = "Evidence"

[node name="EvidenceScreen" parent="." instance=ExtResource("9_3qwbu")]
visible = false

[connection signal="choice_hover" from="DialogBubble" to="." method="_on_dialog_bubble_choice_hover"]
[connection signal="input_choice" from="DialogBubble" to="." method="_on_dialog_bubble_input_choice"]
[connection signal="input_next" from="DialogBubble" to="." method="_on_dialog_bubble_input_next"]
[connection signal="pressed" from="EvidenceButton" to="." method="_on_evidence_button_pressed"]
[connection signal="back_pressed" from="EvidenceScreen" to="." method="_on_evidence_screen_back_pressed"]
[connection signal="present_pressed" from="EvidenceScreen" to="." method="_on_evidence_screen_present_pressed"]
